--- a/app/src/main/res/layout/activity_distributor_dashboard.xml
+++ b/app/src/main/res/layout/activity_distributor_dashboard.xml
@@ -6,9 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".distributors.DistributorDashboard">
+
 <include
     android:id="@+id/headerdistributor"
     layout="@layout/headerdistributor"/>
+    <include
+        layout="@layout/distributorchart"
+        />
 <include
 layout="@layout/distributorsectiontwo"
     />
