--- a/app/src/main/res/layout/distributorchart.xml
+++ b/app/src/main/res/layout/distributorchart.xml
@@ -4,6 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/sd6"
+    android:backgroundTint="@color/lightgreen"
     >
 <LinearLayout
     android:layout_width="match_parent"
@@ -15,12 +17,14 @@
         android:id="@+id/distibutorpiechart"
         android:layout_width="wrap_content"
         android:layout_height="150dp"
+
         android:layout_weight="1"
-        android:padding="6dp" />
+        android:padding="2dp" />
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingHorizontal="@dimen/sd10"
+    android:padding="@dimen/sd6"
     android:orientation="vertical"
 
     >
@@ -39,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="description"
+            android:layout_margin="@dimen/sd2"
             />
     </LinearLayout>
     <LinearLayout
@@ -57,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="description"
+            android:layout_margin="@dimen/sd2"
             />
     </LinearLayout>
     <LinearLayout
@@ -74,6 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="description"
+            android:layout_margin="@dimen/sd2"
             />
     </LinearLayout>
 </LinearLayout>
