--- a/app/src/main/res/drawable/newcurvedbg.xml
+++ b/app/src/main/res/drawable/newcurvedbg.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="#E1EFDB"
+        android:color="#E0F1E2"
         />
     <corners
-        android:topRightRadius="30dp"
-        android:topLeftRadius="30dp"
-        android:bottomRightRadius="@dimen/sd30"
-        android:bottomLeftRadius="@dimen/sd30"
+        android:topRightRadius="250dp"
+        android:topLeftRadius="250dp"
+        android:bottomRightRadius="250dp"
+        android:bottomLeftRadius="250dp"
         />
 
 </shape>
