--- a/app/src/main/res/layout/mshome_screen_options_layout.xml
+++ b/app/src/main/res/layout/mshome_screen_options_layout.xml
@@ -3,43 +3,68 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/sd6"
-        android:background="@color/birdcolor"
         android:gravity="center"
+        android:background="@color/midgreen"
+        android:paddingVertical="@dimen/sd6"
+        android:paddingHorizontal="@dimen/sd12"
+        android:orientation="horizontal"
         >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/bangers"
+            android:text="Manage Parlour"
+            android:textColor="@color/darkgreen"
+            android:textSize="@dimen/sd26"
+            android:textStyle="bold" />
         <ImageView
-            android:layout_width="@dimen/sd30"
-            android:layout_height="@dimen/sd30"
-            android:layout_margin="@dimen/sd4"
-            android:src="@drawable/ic_logo_aen"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_shop"
             />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="My Parlour Connect"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:layout_margin="@dimen/sd4"
-        android:textSize="@dimen/sd20"
-        />
-
-
     </LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="@dimen/sd4"-->
+<!--        android:background="@color/birdcolor"-->
+<!--        android:gravity="center"-->
+<!--        >-->
+<!--        <ImageView-->
+<!--            android:layout_width="@dimen/sd30"-->
+<!--            android:layout_height="@dimen/sd30"-->
+<!--            android:layout_margin="@dimen/sd4"-->
+<!--            android:src="@drawable/ic_logo_aen"-->
+<!--            />-->
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="My Parlour Connect"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textStyle="bold"-->
+<!--        android:layout_margin="@dimen/sd4"-->
+<!--        android:textSize="@dimen/sd20"-->
+<!--        />-->
+
+
+<!--    </LinearLayout>-->
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="@dimen/sd6"
+    android:padding="@dimen/sd4"
     android:layout_weight="1"
     >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
         >
@@ -47,16 +72,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+
         android:id="@+id/ms_myprofile"
         android:padding="@dimen/sd16"
+        android:gravity="center"
         android:background="@drawable/newcurvedbg"
-        android:layout_margin="2dp"
+        android:layout_margin="4dp"
         android:orientation="vertical"
         >
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/sd20"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:padding="@dimen/sd4"
             android:src="@drawable/barber"
             />
 
@@ -65,9 +92,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sd14"
+            android:textSize="@dimen/sd12"
             android:gravity="center"
-            android:padding="@dimen/sd10"
+            android:padding="@dimen/sd4"
             android:textStyle="bold"
             android:textColor="@color/darkgreen"
             android:text="My Profile"
@@ -75,7 +102,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
         >
@@ -85,27 +112,65 @@
             android:layout_weight="1"
             android:id="@+id/ms_home_beauticians"
             android:padding="@dimen/sd14"
+            android:gravity="center"
             android:background="@drawable/newcurvedbg"
-            android:layout_margin="2dp"
+            android:layout_margin="4dp"
             android:orientation="vertical"
             >
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
-            android:padding="@dimen/sd20"
+            android:padding="@dimen/sd4"
             android:src="@drawable/makeup"
             />
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sd14"
+            android:textSize="@dimen/sd12"
             android:gravity="center"
             android:textStyle="bold"
             android:textColor="@color/darkgreen"
-            android:padding="@dimen/sd10"
+            android:padding="@dimen/sd4"
             android:text="Beauticians"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/ms_home_customers"
+            android:padding="@dimen/sd14"
+            android:gravity="center"
+            android:background="@drawable/newcurvedbg"
+            android:layout_margin="4dp"
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_weight="1"
+                android:padding="@dimen/sd8"
+                android:src="@drawable/ic_skincare2"
+                />
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sd12"
+            android:gravity="center"
+            android:padding="@dimen/sd4"
+            android:textStyle="bold"
+            android:textColor="@color/darkgreen"
+            android:text="Customers"
             />
 
     </LinearLayout>
@@ -114,120 +179,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:padding="@dimen/sd6"
+        android:padding="@dimen/sd2"
         android:orientation="horizontal"
         >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:id="@+id/ms_home_customers"
-                android:padding="@dimen/sd14"
-                android:background="@drawable/newcurvedbg"
-                android:layout_margin="2dp"
-                android:orientation="vertical"
-                >
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="@dimen/sd20"
-                android:src="@drawable/ic_skincare2"
-                />
-            </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sd14"
-                android:gravity="center"
-                android:padding="@dimen/sd10"
-                android:textStyle="bold"
-                android:textColor="@color/darkgreen"
-                android:text="Customers"
-                />
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:id="@+id/ms_home_calendar"
-            android:orientation="vertical"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="@dimen/sd14"
-                android:background="@drawable/newcurvedbg"
-                android:layout_margin="2dp"
-                android:orientation="vertical"
-                >
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="@dimen/sd20"
-                android:src="@drawable/calendar"
-                />
-            </LinearLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sd14"
-                android:gravity="center"
-                android:padding="@dimen/sd10"
-                android:textStyle="bold"
-                android:textColor="@color/darkgreen"
-                android:text="Calendar"
-                />
 
-        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:padding="@dimen/sd6"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/sd4"
         android:orientation="horizontal"
         >
         <LinearLayout
             android:id="@+id/ms_home_invoice"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:gravity="center"
                 android:layout_weight="1"
                 android:padding="@dimen/sd18"
                 android:background="@drawable/newcurvedbg"
-                android:layout_margin="2dp"
+                android:layout_margin="4dp"
                 android:orientation="vertical"
                 >
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_weight="1"
-                android:padding="@dimen/sd20"
+                android:padding="@dimen/sd4"
                 android:src="@drawable/budgeting"
                 />
             </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/sd14"
+                android:textSize="@dimen/sd12"
                 android:gravity="center"
-                android:padding="@dimen/sd10"
+                android:padding="@dimen/sd4"
                 android:textStyle="bold"
                 android:textColor="@color/darkgreen"
                 android:text="Invoice"
@@ -236,7 +230,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/ms_home_services"
             android:orientation="vertical"
@@ -246,27 +240,65 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:padding="@dimen/sd14"
+                android:gravity="center"
                 android:background="@drawable/newcurvedbg"
-                android:layout_margin="2dp"
+                android:layout_margin="4dp"
                 android:orientation="vertical"
                 >
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_weight="1"
-                android:padding="@dimen/sd20"
+                android:padding="@dimen/sd4"
                 android:src="@drawable/beautician"
                 />
             </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/sd14"
-                android:padding="@dimen/sd10"
+                android:textSize="@dimen/sd12"
+                android:padding="@dimen/sd4"
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textColor="@color/darkgreen"
                 android:text="Services"
+                />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/ms_home_calendar"
+            android:orientation="vertical"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="@dimen/sd14"
+                android:background="@drawable/newcurvedbg"
+                android:layout_margin="4dp"
+                android:orientation="vertical"
+                >
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_weight="1"
+                    android:padding="@dimen/sd4"
+                    android:src="@drawable/calendar"
+                    />
+            </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sd12"
+                android:gravity="center"
+                android:padding="@dimen/sd4"
+                android:textStyle="bold"
+                android:textColor="@color/darkgreen"
+                android:text="Calendar"
                 />
 
         </LinearLayout>
