--- a/app/src/main/res/layout/activity_msedit_profile.xml
+++ b/app/src/main/res/layout/activity_msedit_profile.xml
@@ -106,8 +106,10 @@
                 android:inputType="text"
                 android:imeOptions="actionNext"
                 android:padding="10dp" />-->
+
             <Spinner
                 android:id="@+id/profile_input_medicineET"
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
