--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -29,7 +29,7 @@
             android:layout_marginStart="@dimen/sd4"
             android:layout_weight="4.5"
             android:scaleType="centerInside"
-            android:src="@drawable/ae_bird"
+            android:src="@drawable/ae_app_logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView7" />
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:gravity="end"
+            android:visibility="gone"
             android:layout_marginRight="@dimen/sd6"
             android:orientation="vertical">
 
