--- a/app/src/main/res/layout/customer_topbarlayout.xml
+++ b/app/src/main/res/layout/customer_topbarlayout.xml
@@ -63,7 +63,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rajesh G"
+                android:text="Logout"
                 android:textColor="@color/gray"
                 android:textSize="@dimen/sd10" />
 
