--- a/app/src/main/res/layout/fragment_cust_performance_frag.xml
+++ b/app/src/main/res/layout/fragment_cust_performance_frag.xml
@@ -11,6 +11,7 @@
     <LinearLayout
         android:id="@+id/llhidden"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent"
         android:orientation="vertical">
     <TextView
@@ -151,21 +152,30 @@
     </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:backgroundTint="@color/lightgreen"
+        android:layout_margin="@dimen/sd6"
+        app:cardCornerRadius="@dimen/sd14"
         android:orientation="vertical">
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            >
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="not enough data to show the chart"
+            android:text="Not enough data "
             android:textSize="20sp"
             android:textColor="@color/darkgreen"
             android:textStyle="bold"
             android:textAllCaps="true"
             android:textAlignment="center"/>
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
 
